--- a/style.css
+++ b/style.css
@@ -1,4 +1,21 @@
 body
 {
-    font-family: Piedro_font-Regular;
+    background-color: #dfdfdf;
+}
+
+/*Divs*/
+    /*Menu*/
+#div-menu
+{
+    background-color: #036b52;
+    font-size: 32px;
+    color: white;
+    text-decoration: none;   
+    
+}
+#div-menu a
+{
+    
+    text-decoration: none;
+    color: white;
 }
