--- a/style.css
+++ b/style.css
@@ -1,3 +1,8 @@
+*
+{
+    margin: 0px;
+    padding: 0px;
+}
 body
 {
     background-color: #dfdfdf;
@@ -5,17 +10,62 @@ body
 
 /*Divs*/
     /*Menu*/
-#div-menu
+header
 {
+    position: fixed;
+    font-family: fantasy;
+    font-weight: 800;
     background-color: #036b52;
-    font-size: 32px;
+    font-size: 28px;
     color: white;
     text-decoration: none;   
+    margin: auto;
+    text-align: center;
+    overflow: hidden;
+    width: 100%;
+    height:10%;
+    padding: 10px;
+    
+}
+#div-menu
+{
+position: relative;
+margin-top: 20px auto 10px auto;
+    
+    
+}
+#div-menu li
+{
+    height:20%;
+    width: 20%;
+    display: inline-block;
+    list-style: none;
+    border: 5px solid #2fc18c;
+    background-color: #036b52;
+    box-shadow: 2px 2px 6px rgb(37, 37, 37);
+    padding: 15px;
+    margin-right: 30px;
+    margin-left: 30px;
+    position: relative;
+    
+    
+}
+#div-menu li:hover
+{
     
 }
 #div-menu a
 {
-    
+    text-align: center;
+    vertical-align:top;
     text-decoration: none;
-    color: white;
+    text-shadow: 1px 1px 4px rgb(25, 25, 25);
+    color: #dfdfdf;
+    position: relative;
+    
+
+}
+#piedro-picture
+{
+    position: relative;
 }
