--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 *
 {
+    
     margin: 0px;
     padding: 0px;
 }
@@ -21,7 +22,7 @@ header
     font-family: fantasy;
     font-weight: 800;
     background-color: #2fc18c;
-    font-size: 28px;
+    font-size: 100%;
     color: white;
     text-decoration: none;   
     margin: auto;
@@ -45,22 +46,21 @@ header:hover
 }
 #div-menu
 {
-position: relative;
 margin-top: 20px auto 10px auto;
     
     
 }
 #div-menu li
 {
-    height:20%;
+    
     width: 20%;
     display: inline-block;
-    border-radius: 10px;
+    border-radius: 10%;
     background-color: #036b52;
     box-shadow: 2px 2px 6px rgb(37, 37, 37);
-    padding: 15px;
-    margin-right: 30px;
-    margin-left: 30px;
+    padding: 1%;
+    margin-right: 5%;
+    margin-left: 5%;
     
     
     
