muda tamanho fonte header

--- a/style.css
+++ b/style.css
@@ -22,7 +22,7 @@ header
     font-family: fantasy;
     font-weight: 800;
     background-color: #2fc18c;
-    font-size: 100%;
+    font-size: 22px;
     color: white;
     text-decoration: none;   
     margin: auto;
