--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 *
 {
-    
+    font-family: monospace, Arial, sans-serif;   
     margin: 0px;
     padding: 0px;
 }
@@ -10,7 +10,7 @@ li
 }
 body
 {
-    background-color: #036b52;
+    background-color: #2fc18c;
 }
 
 /*Divs*/
@@ -25,28 +25,21 @@ header
     font-size: 22px;
     color: white;
     text-decoration: none;   
-    margin: auto;
     text-align: center;
-    overflow: hidden;
+    vertical-align: middle;
     width: 100%;
-    height:0px;
-  
-    padding-top: 50px;
-    box-shadow: 0px 3px 10px black;
+    height:1%;
+    padding:3%;
+    padding-top: 1%;
+    padding-bottom: 5%;
+    box-shadow: 0px 3px 10px #036b52;
   
     
 }
-header:hover
-{
-    padding: 10px;
-    height:10%;
-    transition: 0.5s;
-    
-    
-}
+
 #div-menu
 {
-margin-top: 20px auto 10px auto;
+margin-top: 0px;
     
     
 }
@@ -55,7 +48,7 @@ margin-top: 20px auto 10px auto;
     
     width: 20%;
     display: inline-block;
-    border-radius: 10%;
+    border-radius: 10px;
     background-color: #036b52;
     box-shadow: 2px 2px 6px rgb(37, 37, 37);
     padding: 1%;
@@ -64,15 +57,22 @@ margin-top: 20px auto 10px auto;
     
     
     
+    
+    
 }
-
+#div-menu li:hover
+{
+    background-color: #085744;
+    color: white;
+}
 #div-menu a
 {
+    color: #dfdfdf;
     text-align: center;
     vertical-align:top;
     text-decoration: none;
     text-shadow: 1px 1px 4px rgb(25, 25, 25);
-    color: #dfdfdf;
+    
     
     
 
@@ -85,10 +85,20 @@ margin-top: 20px auto 10px auto;
 /* sections */
 .section-body
 {
-    margin-top: 180px;
-    margin:auto;
     padding: 2%;
-    width: 95%;
+    padding-top:10%;
+    margin: auto;
+    
+    width: 90%;
     border: 2px solid #036b52;
     background-color: #dfdfdf;
+}
+section div
+{
+    border: 2px solid #343333bd;
+}
+div#title
+{   
+    font-size: 32px;
+    text-align: center;
 }
