--- a/gallery.css
+++ b/gallery.css
@@ -9,6 +9,17 @@
 .galleryElement{
     display: inline-block;
     background-color: bisque;
-    height: 200px;
-    border: 1px solid black;
+    border:2px solid rgba(88, 88, 88, 0.521);
+    width: 30%;
+    box-shadow: 1px 5px 10px rgba(0, 0, 0,0.8);
+
+}
+#projects {
+    padding: 0px;
+    
+    
+}
+#pisqicelImg {
+    margin: 0px;
+    margin-bottom: -10px;
 }
