--- a/style.css
+++ b/style.css
@@ -3,6 +3,7 @@
     font-family: monospace, Arial, sans-serif;   
     margin: 0px;
     padding: 0px;
+    box-sizing: border-box;
     
 }
 li 
@@ -11,73 +12,63 @@ li
 }
 body
 {
-    background-color: #2fc18c;
-    font-size: 22px;
+    background-color: #000000;
+    font-size: 14px;
 }
 h1
 {   
     font-size: 50px;
     text-align: center;
+    color: rgb(255, 170, 0);
+    text-shadow: 3px 3px 5px black;
 }
 h2
 {
     font-size: 32px;
+    color: rgb(255, 170, 0);
+    text-shadow: 3px 3px 5px black;
 }
 
     /*Menu*/
 header
 {
-    z-index: 5;
     font-family: fantasy;
     font-weight: 800;
-    background-color: #2fc18c;
-    font-size: 22px;
+    background-color: #000000;
+    font-size: 16px;
     color: white;
     text-decoration: none;   
-    text-align: center;
-    vertical-align: middle;
-    width: 100%;
-    height:1%;
-    padding:3%;
-    padding-top: 1%;
-    padding-bottom: 5%;
 
   
     
 }
 /*Divs*/
-#div-menu
-{
-margin-top: 0px;
-    
-    
+#nav-menu {
+    width: 100%;
+    display: flex;
+    flex-flow: row wrap;
+    justify-content:center;
+    align-content: center;
+    text-align: center;
 }
-#div-menu li {
-    display: inline-block;
-    width: 25%;
-    margin: 20px 20px 0px 20px;
-}
-#div-menu a:hover
+#nav-menu a:hover
 {
-    background-color: #085744;
+    background-color: #33312D;
     color: white;
 }
-#div-menu a
+#nav-menu a
 {
+    box-sizing: content-box;
+    margin: 20px 10px;
+    width: 200px;
     color: #dfdfdf;
-    text-align: center;
-    vertical-align:top;
     text-decoration: none;
     text-shadow: 1px 1px 4px rgb(25, 25, 25);
-    width: 100%;
-    display: inline-block;
     border-radius: 10px;
-    background-color: #036b52;
+    background-color: #33312D;
     box-shadow: 2px 2px 6px rgb(37, 37, 37);
-    padding: 25px 0px;
-    margin-right: 5%;
-    margin-left: 5%;
-    
+    padding: 15px;
+
 
 }
 
@@ -85,46 +76,47 @@ margin-top: 0px;
 /* sections */
 .section-body
 {
+    border-radius: 10px;
     padding: 2%;
     margin: auto;
-    
     width: 90%;
-    border: 2px solid #036b52;
-    background-color: #dfdfdf;
+    border: 2px solid #171717;
+    background-color: #33312D;
 }
 
 /* ----------------------------------------------------------------------------------------------------------------------- */
 #descricao
 {
-    background-color: #ececec ;
-    margin: 10% 1% ;
-    padding: 2%;
+    width: 100%;
+    background-color: #8C877D ;
+    margin: 20px 0px;
+    padding: 20px;
+    border-radius: 10px;
     box-shadow: 1px 5px 10px rgba(0, 0, 0,0.8);
-    display: inline-block;
+
     
 }
 #piedro-picture
 {
-    z-index: 2;
+    margin-right: 30px;
     text-align: center;
-    
     position: relative;
     width: 20%;
-    float: left;
     
     
 }
 
 #piedro-picture img
 {
-    
     border: 3px solid #3d3d3d;
-    width:95%;
+    width:100%;
 }
+
 figure
 {
     position: relative;
 }
+
 #linkpic
 {
     position: absolute;
@@ -152,31 +144,42 @@ figure
 
 #piedro-description
 {
-    width: 70%;
-    float: right;
-    text-align: justify;
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-start;
+    width: 100%;
+    text-align: center;
     height: 80%;
     margin: auto;
     padding: 1%;
+}
+.texts {
+    font-size: 24px;
+    width: 70%;
+    text-align: justify;
 }
 
 /* Competencias */
 
 #competencias
 {
+    border-radius: 10px;border-radius: 10px;
     border-top:2px solid rgba(88, 88, 88, 0.521);
     padding: 2%;
     line-height: 30px;
+    background-color:#8C877D;
+    margin-bottom: 10px;
+    box-shadow: 1px 5px 10px rgba(0, 0, 0,0.8);
 }
 #competencias li
 {
     list-style:disc;
-    background-color: #c5c5c5;
+    background-color: #8C877D;
 
 }
 #competencias li:nth-child(odd)
 {
-    background-color: #dfdfdf;
+    background-color: #605d58;
 }
 
 /* Galeria */
