--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@
     font-family: monospace, Arial, sans-serif;   
     margin: 0px;
     padding: 0px;
-    box-sizing: border-box;
+    box-sizing: content-box;
     
 }
 li 
@@ -12,174 +12,167 @@ li
 }
 body
 {
-    background-color: #000000;
-    font-size: 14px;
+    display: flex;
+    flex-flow: column nowrap;
+    align-items: center;
+    margin: 0;
+    max-width: 100vw;
+    background-color: #111017;
+    color: #D9DBF1 ;
 }
 h1
 {   
-    font-size: 50px;
-    text-align: center;
-    color: rgb(255, 170, 0);
-    text-shadow: 3px 3px 5px black;
+    white-space: nowrap;
+    position: relative;
+    font-size: clamp(14pt, 3vw, 40pt);
+    color: #D9DBF1;
 }
-h2
-{
-    font-size: 32px;
-    color: rgb(255, 170, 0);
-    text-shadow: 3px 3px 5px black;
-}
-
     /*Menu*/
 header
 {
-    font-family: fantasy;
+    width: 100vw;
+    font-family:Arial, Helvetica, sans-serif;
     font-weight: 800;
-    background-color: #000000;
-    font-size: 16px;
     color: white;
-    text-decoration: none;   
+    text-decoration: none;
+    display: flex;
+    flex-flow: row nowrap;
+    justify-content:  space-around;
+    margin-bottom: clamp(20px, 5vw, 100px);
+    padding: 10px;
+}
+main {
+    width: 80vw;
+    display: flex;
+    flex-flow: column;
+    gap: 50px;
 
-  
-    
 }
 /*Divs*/
-#nav-menu {
-    width: 100%;
+nav {
     display: flex;
-    flex-flow: row wrap;
+    flex-flow: row nowrap;
     justify-content:center;
     align-content: center;
     text-align: center;
+    
 }
-#nav-menu a:hover
+
+nav a
 {
-    background-color: #33312D;
+    margin: 20px 20px;
+    white-space:nowrap;
+    color: #D8E4FF;
+    text-decoration: none;
+    font-size: clamp(10pt, 2vw, 24pt);
+}
+
+nav img {
+   width: clamp(20px, 2vw, 50px); 
+}
+
+img {
+    width: clamp(150px, 30vw, 300px);
+}
+
+.profile-section {
+    display: flex;
+    flex-flow: column;
+    align-items: center;
+    justify-content: center;
+    gap: 20px;
+    border-bottom: 1px solid #d8e4ff5b;
+    border-bottom-style: outset;
+    padding-bottom: 20px;
+    width: 100%;
+}
+
+.profile-picture {
+    display: flex;
+    flex-flow: column nowrap;
+    align-items: center;
+    justify-content: center;
+    gap: 5px;
+}
+
+.profile-picture img{
+    border-radius: 50%;
     color: white;
 }
-#nav-menu a
-{
-    box-sizing: content-box;
-    margin: 20px 10px;
-    width: 200px;
-    color: #dfdfdf;
-    text-decoration: none;
-    text-shadow: 1px 1px 4px rgb(25, 25, 25);
-    border-radius: 10px;
-    background-color: #33312D;
-    box-shadow: 2px 2px 6px rgb(37, 37, 37);
-    padding: 15px;
-
-
-}
-
-
-/* sections */
-.section-body
-{
-    border-radius: 10px;
-    padding: 2%;
-    margin: auto;
-    width: 90%;
-    border: 2px solid #171717;
-    background-color: #33312D;
-}
-
-/* ----------------------------------------------------------------------------------------------------------------------- */
-#descricao
-{
-    width: 100%;
-    background-color: #8C877D ;
-    margin: 20px 0px;
-    padding: 20px;
-    border-radius: 10px;
-    box-shadow: 1px 5px 10px rgba(0, 0, 0,0.8);
-
-    
-}
-#piedro-picture
-{
-    margin-right: 30px;
-    text-align: center;
-    position: relative;
-    width: 20%;
-    
-    
-}
-
-#piedro-picture img
-{
-    border: 3px solid #3d3d3d;
-    width:100%;
-}
-
-figure
-{
-    position: relative;
-}
-
-#linkpic
-{
-    position: absolute;
-    top: 0px;
-    left: 0px;
-    width: 100%;
-    height: 100%;
-    box-sizing: border-box;
-    background-color: #3d3d3d00;
-    font-size: 0px;
-    
-}
-#linkpic:hover
-{
-    background-color: #3d3d3d1c;
-}
-#linkedin
-{
-
-    width: 20%;
-    position: absolute;
-    bottom:0px;
-    left: 3px;
-}
-
-#piedro-description
-{
+.text-long {
+    font-size: clamp(10pt, 2vw, 20pt);
+    width: clamp(80vw, 80%, 95vw);
     display: flex;
-    justify-content: space-between;
-    align-items: flex-start;
-    width: 100%;
-    text-align: center;
-    height: 80%;
-    margin: auto;
-    padding: 1%;
+    align-items: center;
+    text-align: justify;
+    justify-content: center;
+
 }
-.texts {
-    font-size: 24px;
-    width: 70%;
+.projects {
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: space-around;
+    align-items: stretch;
+    width: 100%;
+    gap: 10px;
+
+}
+.project img {
+    width:clamp(200px, 20vw, 300px);
+
+}
+.project {
+    box-sizing: border-box;
+    text-decoration: none;
+    display: flex;
+    flex-flow: column;
+    align-items: center;
+    justify-content: space-around;
+    text-align: center;
+    border: 1px solid #d8e4ff2a;
+    gap: 5px;
+    font-size: clamp(10pt, 2vw, 14pt);
+    width: clamp(400px, 30vw, 500px);
+    height: clamp(400px, 30vw, 500px);
+}
+.project p {
+    width: 90%;
+    margin: 10px 0;
     text-align: justify;
 }
-
-/* Competencias */
-
-#competencias
-{
-    border-radius: 10px;border-radius: 10px;
-    border-top:2px solid rgba(88, 88, 88, 0.521);
-    padding: 2%;
-    line-height: 30px;
-    background-color:#8C877D;
-    margin-bottom: 10px;
-    box-shadow: 1px 5px 10px rgba(0, 0, 0,0.8);
+.project div {
+    display: flex;
+    justify-content: space-around;
+    width: 100%;
 }
-#competencias li
-{
-    list-style:disc;
-    background-color: #8C877D;
-
+.project-page-link {
+    text-decoration: none;
+    color:#111017;
+    background-color: #D8E4FF;
+    border-radius:  10px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 5px;
 }
-#competencias li:nth-child(odd)
-{
-    background-color: #605d58;
+.githubLink {
+    width: clamp(3vw, 30px, 40vw);
+    height: clamp(3vw, 30px, 40vw);
+    background-size: cover;
+    background-image: url('./images/github.svg');
 }
 
-/* Galeria */
+footer {
+    display: flex;
+    align-items: flex-start;
+    justify-content: space-between;
+    padding: 10px;
+    text-decoration: none;
+    flex-flow: row wrap;
+    width: 80vw;
+    gap: 10px;
+}
+footer div {
+    display: flex;
+    gap: 40px;
+}
